MCA App/Release/MCA Dev Org/src/objects/ACH_Batch__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Provider_Name__c</fullName>
        <label>ACH Provider Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Date_Time__c</fullName>
        <label>Batch Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Batch_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Batch ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isScheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isScheduled</label>
        <type>Checkbox</type>
    </fields>
    <label>ACH Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BATCH-{0000000}</displayFormat>
        <label>ACH Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACH Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>